--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb+srv://company6213305:QiebPE6n48oiCw7V@cluster0.2yhwi.mongodb.net/ovenpizza?retryWrites=true&w=majority
+##MONGODB_URI=mongodb+srv://company6213305:QiebPE6n48oiCw7V@cluster0.2yhwi.mongodb.net/ovenpizza?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://tar_lrsk_au:Tatar2012@cluster0.r0f4y.mongodb.net/ovenpizza?retryWrites=true&w=majority
 
